fix: update dark mode styles to improve background color for better visibility

--- a/src/styles/pages/index.less
+++ b/src/styles/pages/index.less
@@ -717,6 +717,8 @@
 @media only screen and (min-width: 0em) {
   body.dark-mode {
     #sbs-r {
+      background-color: var(--medium);
+
       .cs-left {
         &:before,
         &:after {
